fix filters on mobile

--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ body {
   display: flex;
   font-size: 14px;
   top: 90px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 11px;
   padding-bottom: 15px;
   margin-left: 20px;
@@ -88,12 +87,13 @@ form {
 }
 .filtres {
   display: flex;
+  flex-wrap: wrap;
   font-weight: bold;
+  gap: 10px;
+  margin-top: 10px;
 }
 
 .title-filter{
-  height: 80px;
-  padding: 0 25px;
   display: flex;
   align-items: center;
   color: var(--black);
@@ -104,9 +104,7 @@ form {
   position: relative;
   justify-content: flex-start;
   padding-right: 10px;
-  margin: 0 10px;
   align-items: center;
-  margin-top: 22px;
   height: 35px;
   border: 2px solid var(--gray);
   border-radius: 40px;
@@ -193,7 +191,6 @@ form {
 .AfficherPlus{
   cursor: pointer;
   border: none;
-  font-family: Raleway;
 }
 
 .AfficherPlus:hover{
@@ -388,12 +385,9 @@ color: var(--blue);
   flex-wrap: wrap;
   padding-top: 20px;
 }
-  
-@media screen and ( max-width:375px)
-{
-  .filtres{
-    flex-direction: column;
-  }
+
+/* breakpoint for mobile devices */
+@media screen and (max-width: 375px) {
   .title-filter{
     min-width: 40px;
   }
